nest resources endpoint under users
